@@ -550,6 +550,11 @@ while B<dh_makeshlibs> detects packages containing multiarch
 directories and sets a Pre-Dependency on multiarch-support in
 ${misc:Pre-Depends}
 
+=item -
+
+B<dh_auto_configure> does not include the source package name
+in --libexecdir when using autoconf.
+
 =back
 
 =back
