@@ -3,6 +3,8 @@ debhelper (8.1.7) UNRELEASED; urgency=low
   * Fix example. Closes: #627534
   * Fix error message. Closes: #628053
   * dh_movefiles: Optimise use of xargs. Closes: #627737
+  * dh_auto_configure: In v9, does not include the source package name
+    in --libexecdir when using autoconf. Closes: #541458
 
  -- Joey Hess <joeyh@debian.org>  Sat, 21 May 2011 15:24:19 -0400
 
